Fixes for search display on smaller screens

--- a/assets/scss/_search.scss
+++ b/assets/scss/_search.scss
@@ -13,3 +13,10 @@
 #overlay.loading {
   filter: blur(2px);
 }
+
+.profilesummary {
+  color: #000;
+  text-underline: none;
+  display: block;
+  width: 100%;
+}
